add error and validation
